# redshifted_gaussian_fields

./: LICENSE  README.md  functions.py  generator.py  generator2.py  pyproject.toml  setup.py
notebooks/: tutorial_draft.ipynb
redshifted_gaussian_fields/: generator.py
scripts/: full_band_fiducial_pspec.py  generate_pow_neg2_realizations.py  model_1.py  model_1_ell0_500.py  model_1_ell501_1000.py  model_1b.py  model_2.py  model_3.py  model_4.py  model_5.py  model_5b.py  run_100_200MHz_ellmax1000.pbs  run_model_1.pbs  run_model_1_ell0_500.pbs  run_model_1_ell501_1000.pbs  run_script.pbs  run_short_test1.pbs  run_short_test2.pbs  short_test1.py  short_test2.py  short_test3.py  short_test4.py
src/redshifted_gaussian_fields/: cli.py  generator.py
tests/: conftest.py  test_generator.py
